[Docker] Change memory and GC parameters
- Use up to 2GB of RAM for both Frontend and Backend
- Switch to G1 garbage collector
- Drop '-XX:+ScavengeBeforeFullGC', it is enabled by default
- Drop '-XX:MaxRAMFraction=1' because we limit mem usage with -Xmx