@@ -26,7 +26,7 @@ then
 fi
 
 echo "Starting DeviceHive frontend"
-java -server -Xmx512m -XX:MaxRAMFraction=1 -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -jar \
+java -server -Xms1g -Xmx2g -XX:+UseG1GC -XX:MaxGCPauseMillis=20 -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError -jar \
 -Dcom.devicehive.log.level=${DH_LOG_LEVEL:-INFO} \
 -Droot.log.level=${ROOT_LOG_LEVEL:-WARN} \
 -Dflyway.enabled=false \
